hphp/hack/test/typecheck/constraints/class_type_parameter.php
<?hh // strict

interface Constraint<T as num> {}

// Not a valid constraint since T is unbounded type parameter
class InvalidConstraint<T, Tc as Constraint<T>> {}
